syntax = "proto3";

package ASC.Core.Common.Contracts;

message BackupProgress {
    bool IsCompleted = 1;
    int32 Progress = 2;
    string Error = 3;
    string Link = 4;
}