syntax = "proto3";

package ASC.Core.Common.Contracts;

message StartRestoreRequest {
    int32 TenantId = 1;
    string BackupId = 2;
    int32 StorageType = 3;
    string FilePathOrId = 4;
    bool NotifyAfterCompletion = 5;
    map<string, string> StorageParams = 6;
}