syntax = "proto3";

package ASC.Data.Backup.Contracts;

message DeleteBackupRequest {
    int32 TenantId = 1;
    bytes Id = 2;
}
