syntax = "proto3";

package ASC.Data.Backup.Contracts;

message StartBackupRequest {
    int32 TenantId = 1;
    string UserId = 2;
    bool BackupMail = 3;
    int32 StorageType = 4;
    string StorageBasePath = 5;
    map<string, string> StorageParams = 6;
}
