syntax = "proto3";

package ASC.Data.Backup.Contracts;

message StartTransferRequest {
    int32 TenantId = 1;
    string TargetRegion = 2;
    bool NotifyUsers = 3;
    bool BackupMail = 4;
}
